created getConversation and searchUsers
